finished manage tickets, added message page, added transaction,  change input fileds to number in order to prevent sql injection

--- a/templates/buy_ticket.html
+++ b/templates/buy_ticket.html
@@ -8,7 +8,7 @@
             <div class="paymentContainer">
                 <div class="paymentForm">
                     <label for="name_surname">ID Number:</label>
-                    <input type="text" id="ID_number" name="ID_number" required>
+                    <input type="number" id="ID_number" name="ID_number" required>
                 </div>
                 <div class="paymentForm">
                     <label for="name_surname">Name and Surname:</label>
