--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -292,3 +292,16 @@ button {
   button:hover {
     background-color: #85e48a;
   }
+
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
