--- a/templates/check_in.html
+++ b/templates/check_in.html
@@ -7,12 +7,12 @@
 <form class="search-form" action="/boarding_pass" method="post">
     <div class="form-group">
         <label for="from">Ticket Number</label>
-        <input type="text" id="ticket_no" name="ticket_no" placeholder="0005432660784" >
+        <input type="number" id="ticket_no" name="ticket_no" placeholder="0005432660784" >
     </div>
 
     <div class="form-group">
         <label for="from">ID Number</label>
-        <input type="text" id="passenger_id" name="passenger_id" placeholder="Your ID Number" >
+        <input type="number" id="passenger_id" name="passenger_id" placeholder="Your ID Number" >
     </div>
    
     <div class="groupOne">
