--- a/templates/check_ticket_number.html
+++ b/templates/check_ticket_number.html
@@ -6,12 +6,12 @@
 <form action="/manage_tickets" class="search-form" method="post">
     <div class="form-group">
         <label for="from">Ticket Number</label>
-        <input type="text" id="ticket_no" name="ticket_no" >
+        <input type="number" id="ticket_no" name="ticket_no" >
     </div>
 
     <div class="form-group">
         <label for="from">ID Number</label>
-        <input type="text" id="passenger_id" name="passenger_id" placeholder="Your ID Number" >
+        <input type="number" id="passenger_id" name="passenger_id" placeholder="Your ID Number" >
     </div>
    
     <div class="groupOne">
