--- a/templates/manage_tickets.html
+++ b/templates/manage_tickets.html
@@ -12,7 +12,8 @@
     {% else %}
       <p>You can change your ticket to Economy class. </p>
       <form method="post" action="{{ url_for('degrade_ticket') }}">
-        <button type="submit">Degrade Your Ticket to Economy</button>
+        <input type="hidden" name="ticket_no" value="{{h_ticket_no}}" />
+        <button type="submit">Downgrade Your Ticket to Economy</button>
       </form>
     {% endif %}
   {% else %}
@@ -21,6 +22,7 @@
     {% else %}
       <p>You can upgrade your ticket to Business! </p>
       <form method="post" action="{{ url_for('upgrade_ticket') }}">
+        <input type="hidden" name="ticket_no" value="{{h_ticket_no}}" />
         <button type="submit">Upgrade Your Ticket to Business</button>
       </form>
     {% endif %}
@@ -30,12 +32,13 @@
     <p>You cannot cancel your flight since you have checked in already.</p>
   {% else %}
     <p>If you haven't checked in yet, you can cancel your flight.</p>
-    <form method="get" action="{{ url_for('cancel_flight') }}">
+    <form method="post" action="{{ url_for('cancel_flight') }}">
+      <input type="hidden" name="ticket_no" value="{{h_ticket_no}}" />
       <button type="submit">Cancel Your Flight</button>
     </form>
   {% endif %}
 
-  <form method="get" action="{{ url_for('search_flight') }}">
+  <form action="{{ url_for('search_flight') }}">
     <button type="submit">Main Page</button>
   </form>
 
